crates/truth-catalog/tests/compile_fail/capability_registry_not_a_dep.rs
//! Guard: capability_registry is NOT a dependency of truth-catalog.
fn main() {
    let _modules = capability_registry::MODULES;
}
